# Tiamat

./: LICENSE  README.md  class_test.ipynb  draft.ipynb  main.py  make_plots.py  mandelbrot_x_-2_1_y_-1.5_1.5_res_0.01_step_2.npy  params.yml  pyproject.toml  quickfigure.ipynb  style.mplstyle  test.py  test_function.py
data/: mandelbrot_escape_time_x_-1.81_-1.72_y_0_0.05_res_0.0001_step_100.npy  mandelbrot_escape_time_x_-2_-1.3_y_0_0.1_res_0.0005_step_100.npy  mandelbrot_escape_time_x_-2_-1.3_y_0_0.1_res_0.0005_step_200.npy  mandelbrot_x_-2_1_y_-1.5_1.5_res_0.1_step_2.npy
matplotlib_stylesheets/: maps.mplstyle  orbits.mplstyle
tiamat/: mandelbrot.py  plot.py
