[tool.poetry]
name = "tiamat"
version = "0.1.0"
description = ""
authors = ["Jerome Leblanc"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
