[tool.poetry]
name = "tiamat"
version = "0.1.0"
description = ""
authors = ["Jerome Leblanc"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.18,<1.24"
matplotlib = "^3.6.3"
cmasher = "^1.6.3"
rich = "^13.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
